# pcae-harness

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  VISION.md  pyproject.toml
.agent-prompts/: end-session.md
.githooks/: pre-commit
.github/workflows/: pcae-governance.yml
.pcae/: .gitignore  architecture-history.json  fleet.json  phase-completion-metadata.json  phase-completion-report.md  policy.toml  session.json  strategic-lineage.json  strategic_reviews.json
.pcae/exports/: .gitignore  governance-bundle-20260524-195140.json  governance-bundle-20260524-195417.json
.pcae/fleet-exports/: .gitignore
docs/: ADOPTION_LIFECYCLE_SUMMARY.md  AGENT_ASSIGNMENT_APPROVAL.md  AGENT_CAPABILITY_REGISTRY_DESIGN.md  AGENT_IDENTITY_CAPABILITY_PROBE.md  AGENT_ROUTING_DRY_RUN.md  ARCHITECTURE.md  ARTIFACT_INDEX_DESIGN.md  BACKEND_OUTPUT_LIFECYCLE_RETROSPECTIVE.md  CAPABILITY_INVENTORY.md  COMMANDS.md  DECISION_LOG_INTEGRATION_DESIGN.md  DEMO_SCRIPT.md  FULL_HEALTH_BASELINE_84K1.md  FULL_HEALTH_BASELINE_84K3.md  GLOSSARY.md  GOVERNANCE_EVENT_TIMELINE_DESIGN.md  GOVERNANCE_LIFECYCLE_DIAGRAM.md  HANDOFF_STATE_REFRESH_84K2.md  HANDOFF_STATE_REFRESH_88N2.md  HANDOFF_STATE_REFRESH_88N4.md  INSTALLATION.md  LIFECYCLE_COMMAND_CONSOLIDATION_PLAN.md  LIFECYCLE_STATE_MACHINE.md  MULTI_AGENT_ADOPTION_APPROVAL.md  MULTI_AGENT_ADOPTION_CANDIDATE_SCHEMA.md  MULTI_AGENT_ADOPTION_EXECUTION.md  MULTI_AGENT_ADOPTION_REVIEW.md  MULTI_AGENT_BACKEND_INVOCATION_GUARD_HARDENING.md  MULTI_AGENT_CAPTURE_METADATA_SCHEMA.md  MULTI_AGENT_CONTRACT_INSTANCE_DRY_RUN.md  MULTI_AGENT_DEFERRED_ITEM_TRACKER.md  MULTI_AGENT_GOVERNANCE_SUMMARY.md  MULTI_AGENT_LIFECYCLE_COMMAND_DRY_RUN.md  MULTI_AGENT_LIFECYCLE_FINAL_VERIFICATION.md  MULTI_AGENT_LIFECYCLE_LESSONS_ROADMAP.md  MULTI_AGENT_LIFECYCLE_STATE_MACHINE.md  MULTI_AGENT_OUTPUT_INTAKE.md  MULTI_AGENT_OUTPUT_INTAKE_SCHEMA.md  MULTI_AGENT_PROMPT_CAPTURE_STORAGE_POLICY.md  MULTI_AGENT_PROMPT_INVOCATION_APPROVAL.md  (+263 more)
docs/architecture/: 01-governance-stack.md  02-execution-lifecycle.md  03-prompt-governance.md  04-runtime-governance.md  05-future-autonomous-flow.md
docs/governance/: GOVERNANCE_HANDBOOK.md
docs/testing/: TEST_EXECUTION.md
docs/whitepaper/: PCAE_WHITEPAPER.md
scripts/: check-docs-updated.ps1  check-docs-updated.sh
src/pcae/: __init__.py  __main__.py  artifact_metadata.py  cli.py  hook_bypass.py  lifecycle.py
tasks/: DECISIONS.md  DONE.md  TODO.md
tasks/active/: 20260522-2113-test-task-contract.md  20260523-0731-implement-global-policy-configuration.md  20260605-1052-multi-agent-governance-audit.md  20260606-2117-documentation-refresh-and-release-checkpoint.md  20260606-2341-runtime-integration-readiness.md  20260607-0241-55a.md  20260607-1400-61a-runtime-registry.md  (+513 more)
tests/: artifact_only_invocation_fixtures.py  conftest.py  test_88n5_fast_green_validation.py  test_adoption_mutation_gate.py  test_advisory_mode.py  test_agent.py  test_analytics.py  test_architecture.py  test_artifact_index.py  test_artifact_metadata_consistency.py  test_backend_cli.py  test_backend_gate.py  test_backend_invocations.py  test_backend_preflight.py  test_backend_preflight_review.py  test_broker_shell_gate_edge_cases.py  test_broker_shell_gate_integration.py  test_check.py  test_ci.py  test_commit_push_gate.py  test_commit_push_preflight.py  test_commit_push_preflight_review.py  test_context.py  test_daemon.py  test_decision_log.py  test_docs.py  test_doctor_test_run.py  test_documentation_alignment_public_narrative_v0_1.py  test_dry_run_cli.py  test_dry_run_simulation.py  test_enforcement_approval.py  test_enforcement_audit.py  test_enforcement_readiness.py  test_enforcement_readiness_cli.py  test_enforcement_rollback.py  test_execution_boundary_no_go_artifact_trust.py  test_execution_boundary_no_go_contract.py  test_execution_boundary_no_go_enforcement_model.py  test_execution_readiness_preflight.py  test_execution_readiness_preflight_artifact_trust.py  (+94 more)
(+618 files in other folders)
