[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pcae-harness"
version = "0.1.0"
description = "Persistent Constrained Agentic Engineering Harness CLI."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "PCAE Harness Contributors" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
pcae = "pcae.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pcae"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
