[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pcae-harness"
version = "0.1.0"
description = "Persistent Constrained Agentic Engineering Harness CLI."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "PCAE Harness Contributors" }
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-xdist>=3.0"
]

[project.scripts]
pcae = "pcae.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pcae"]

# Phase 106D: without an explicit sdist scope, hatchling's default sdist
# swept in the entire repository checkout (44,399 files, ~6.4MB, including
# local-only .claude/ settings and .pcae/ runtime state such as
# session.json/provenance-history.json) — found via a clean packaging
# smoke test. The wheel (the artifact most installs actually use) was
# already correctly scoped via `packages` above; this restricts the sdist
# to the same essentials needed to build and run the package from source.
[tool.hatch.build.targets.sdist]
include = [
  "src/pcae",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# Use loadfile distribution so tests from the same file share a worker.
# CLI tests that share .pcae/ artifact directories are inherently stateful
# and require sequential execution within a file.
addopts = "--dist=loadfile"
markers = [
    "slow: marks tests that spawn subprocesses or take >1s each",
    "integration: marks CLI integration tests that spawn pcae subprocesses",
    "phase_closure: marks heavyweight phase-closure validation tests",
    "fast_green: high-signal governance/core tests; normal development gate (~1-2 min with -n auto)",
]

# Phase test selection strategy (Phase 61J):
# Tests follow test_{phase_id}_{description} naming convention.
# Use `python -m pytest -k {phase_id}` to run all tests for a phase.
# Examples: python -m pytest -k 61h  (Phase 61H: Automated Task Transition)
#           python -m pytest -k 61i  (Phase 61I: Handoff State Refresh)
#           python -m pytest -k 61j  (Phase 61J: Phase Test Selection Hardening)
# Zero-collection is a validation failure — always verify selector finds > 0 tests.
#
# Test tiers (Phase 88N.5):
#   fast-green: python -m pytest -m "fast_green" -n auto -ra --durations=50
#   quick:      python -m pytest -m "not slow and not phase_closure" -n auto
#   governance: python -m pytest -m "integration or slow" -n auto
#   full:       python -m pytest -n auto
